# mcp-ntis

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
chatbot/: __init__.py  agent.py  app.py
docs/: agent-matrix.md  api-reference.md  architecture.md  control-plane.md  convergence-model.md  decision-framework.md  escalation-model.md  integration-strategy.md  knowledge-retrieval.md  licenses.md  memory-model.md  operating-model.md  project-types.md  quality-gates.md  research-mode.md  runbook-human-approval.md  runbook-new-project.md  runbook-recovery.md  runbook-research-heavy.md  runbook-retrieval-heavy.md  runbook-software-delivery.md  self-improvement.md  task-lifecycle.md  upstreams.md
docs/decisions/: bootstrap-plan.md  hardening-plan.md
evaluation/: IMPROVEMENTS.md  MCP_SERVER_TEST_REPORT.md  QA_SHOWCASE.md  SCIENCEON_DEEP_QA.md  SCIENCEON_QUALITY_REVIEW.md  SMART_TOILET_PLAN.md  TEST_PLAN.md  TEST_RESULTS.md  TOOL_DESCRIPTION_AUDIT.md
evaluation/scenarios/: 00_COVERAGE_MATRIX.md  01_AI_DRUG_DISCOVERY.md  02_SOLID_STATE_BATTERY.md  03_MRNA_VACCINE_ECOSYSTEM.md  04_QUANTUM_TALENT_ACQUISITION.md  05_SMART_TOILET_CONSORTIUM.md  05_SMART_TOILET_DEEP_V2.md  05_SMART_TOILET_DEEP_V3.md  05_SMART_TOILET_HEALTHCARE.md  06_CRISPR_THERAPY_CLASSIFICATION.md  09_6G_COMMUNICATION_TRENDS.md  (+5 more)
gateway/: README.md  __init__.py  main.py  mcp-gateway.service
skills/: api-integration.md  index.md  llm-workflow.md  pagination-strategy.md  response-transformation.md  tool-development.md
tests/: test_extra_tools.py  test_mcp_scenarios.py
(+41 files in other folders)
