[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-ntis"
version = "0.1.0"
description = "MCP server for NTIS (National Science & Technology Information Service) - 국가과학기술지식정보서비스 국가R&D 과제/성과 검색 및 분류추천 MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.3.0",
    "fastmcp>=2.2.0",
    "python-dotenv>=1.0.1",
]

[[project.authors]]
name = "AI Center"
email = "cglee@scaledcognition.com"

[project.scripts]
mcp-ntis = "mcp_ntis.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_ntis"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
